{ListPages.css} fix flex wrap

--- a/client/src/styles/CardDesign.css
+++ b/client/src/styles/CardDesign.css
@@ -10,6 +10,9 @@
     height: 200px;
     width: 200px;
 
+    margin-top: 0;
+    margin-bottom: 0;
+
 }
 
 .card-image {
