--- a/client/src/styles/ListPages.css
+++ b/client/src/styles/ListPages.css
@@ -10,11 +10,8 @@
 
 
 .pageSpread {
-    width: 100%;
-    height: 100%;
     position: relative;
     display: flex;
-    /* flex-direction: row; */
     margin-top: 75px;
  }
 
@@ -27,13 +24,7 @@
  }
 
 
-  .card{
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
- 
- 
+  
   .pagePhoto {
     margin-left: 22px;
   }
